其他页面细节

--- a/templates/purchase/plan.html
+++ b/templates/purchase/plan.html
@@ -1,15 +1,71 @@
 <div class="panel panel-flat">
 	<div class="panel-body">
+		<div class="mb-20">
+			<div class="input-group col-lg-2 pull-right">
+				<input type="text" class="form-control" placeholder=" ">
+				<span class="input-group-btn">
+					<button class="btn bg-teal" type="button">搜索</button>
+				</span>
+			</div>
+			<div class="clearfix"></div>
+		</div>
 		<table class="table table-bordered">
 			<thead>
 				<tr>
 					<th>ID</th>
-					<th>套餐</th>
-					<th>单价</th>
+					<th>名称</th>
+					<th>终端数量</th>
 					<th>销售总量</th>
+					<th>价格</th>
 					<th>创建时间</th>
 				</tr>
 			</thead>
+			<tbody>
+				<tr>
+					<td>20131231313</td>
+					<td>优惠套餐1</td>
+					<td>100</td>
+					<td>100</td>
+					<td>1000.00￥</td>
+					<td>2012-10-21</td>
+				</tr>
+				<tr>
+					<td>20131231313</td>
+					<td>优惠套餐2</td>
+					<td>200</td>
+					<td>100</td>
+					<td>1000.00￥</td>
+					<td>2012-10-21</td>
+				</tr>
+				<tr>
+					<td>20131231313</td>
+					<td>优惠套餐3</td>
+					<td>300</td>
+					<td>100</td>
+					<td>1000.00￥</td>
+					<td>2012-10-21</td>
+				</tr>
+				<tr>
+					<td>20131231313</td>
+					<td>优惠套餐4</td>
+					<td>400</td>
+					<td>100</td>
+					<td>1000.00￥</td>
+					<td>2012-10-21</td>
+				</tr>
+			</tbody>
 		</table>
+
+		<div class="text-right mt-20">
+			<ul class="pagination">
+				<li><a href="#">&lsaquo;</a></li>
+				<li class="active"><a href="#">1</a></li>
+				<li><a href="#">2</a></li>
+				<li><a href="#">3</a></li>
+				<li class="disabled"><a href="#">4</a></li>
+				<li><a href="#">5</a></li>
+				<li><a href="#">&rsaquo;</a></li>
+			</ul>
+		</div>
 	</div>
 </div>
