--- a/templates/users/admin.html
+++ b/templates/users/admin.html
@@ -1,13 +1,21 @@
 <div class="panel panel-flat">
 	<div class="panel-body">
+		<div class="mb-20">
+			<a href="" title="" class="btn btn-primary"><i class="icon-user-plus"></i> 新增管理员</a>
+			<a href="" title="" class="btn btn-danger"><i class="icon-user-minus"></i> 批量删除</a>
+			<div class="input-group col-lg-2 pull-right">
+				<input type="text" class="form-control" placeholder=" ">
+				<span class="input-group-btn">
+					<button class="btn bg-teal" type="button">搜索</button>
+				</span>
+			</div>
+		</div>
 		<table class="table table-bordered">
 			<thead>
 				<tr>
 					<th><input type="checkbox" name="" value=""></th>
 					<th>ID</th>
 					<th>帐号</th>
-					<th>手机</th>
-					<th>邮箱</th>
 					<th>姓名</th>
 					<th>消费总金额</th>
 					<th>推广广告主总数</th>
@@ -24,8 +32,6 @@
 					<td><input type="checkbox" name="" value=""></td>
 					<td>200232</td>
 					<td>test</td>
-					<td>153203300</td>
-					<td>123123@qq.com</td>
 					<td>姓名</td>
 					<td>消费总金额</td>
 					<td>推广广告主总数</td>
@@ -40,8 +46,6 @@
 					<td><input type="checkbox" name="" value=""></td>
 					<td>200232</td>
 					<td>test</td>
-					<td>153203300</td>
-					<td>123123@qq.com</td>
 					<td>姓名</td>
 					<td>10000</td>
 					<td>121</td>
