--- a/templates/users/customer.html
+++ b/templates/users/customer.html
@@ -1,5 +1,16 @@
 <div class="panel panel-flat">
 	<div class="panel-body">
+		<div class="mb-20">
+			<a href="" title="" class="btn btn-primary"><i class="icon-user-plus"></i> 新增管理员</a>
+			<a href="" title="" class="btn btn-danger"><i class="icon-user-minus"></i> 批量删除</a>
+
+			<div class="input-group col-lg-2 pull-right">
+				<input type="text" class="form-control" placeholder=" ">
+				<span class="input-group-btn">
+					<button class="btn bg-teal" type="button">搜索</button>
+				</span>
+			</div>
+		</div>
 		<table class="table table-bordered">
 			<thead>
 				<tr>
@@ -24,7 +35,7 @@
 					<td>123123@qq.com</td>
 					<td>姓名</td>
 					<td>公司</td>
-					<td>播放总时长</td>
+					<td>1002</td>
 					<td>2010-01-12</td>
 					<td></td>
 				</tr>
@@ -36,7 +47,7 @@
 					<td>123123@qq.com</td>
 					<td>姓名</td>
 					<td>公司</td>
-					<td>播放总时长</td>
+					<td>1002</td>
 					<td>2010-01-12</td>
 					<td></td>
 				</tr>
