--- a/templates/purchase/log.html
+++ b/templates/purchase/log.html
@@ -1,46 +1,53 @@
 <div class="panel panel-flat">
 	<div class="panel-body">
 		<div class="mb-20">
-			<a href="" title="" class="btn btn-primary"><i class="icon-user-plus"></i> 新增管理员</a>
-			<a href="" title="" class="btn btn-danger"><i class="icon-user-minus"></i> 批量删除</a>
 			<div class="input-group col-lg-2 pull-right">
 				<input type="text" class="form-control" placeholder=" ">
 				<span class="input-group-btn">
 					<button class="btn bg-teal" type="button">搜索</button>
 				</span>
 			</div>
+			<div class="clearfix"></div>
 		</div>
-		
 		<table class="table table-bordered">
 			<thead>
 				<tr>
 					<th><input type="checkbox" name="" value=""></th>
 					<th>ID</th>
-					<th>帐号</th>
-					<th>邮箱</th>
-					<th>所属管理员</th>
-					<th>创建时间</th>
-					<th>操作</th>
+					<th>支付帐号</th>
+					<th>支付时间</th>
+					<th>支付金额</th>
+					<th>支付方式</th>
+					<th>支付流水号</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>200232</td>
+					<td>1</td>
 					<td>test</td>
-					<td>123123@qq.com</td>
-					<td>admin</td>
-					<td>2010-01-12</td>
-					<td></td>
+					<td>2016.1.20</td>
+					<td>1000.00元</td>
+					<td>支付宝</td>
+					<td>2222284545454</td>
 				</tr>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>200232</td>
+					<td>1</td>
 					<td>test</td>
-					<td>123123@qq.com</td>
-					<td>admin</td>
-					<td>2010-01-12</td>
-					<td></td>
+					<td>2016.1.20</td>
+					<td>1000.00元</td>
+					<td>支付宝</td>
+					<td>2222284545454</td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>1</td>
+					<td>test</td>
+					<td>2016.1.20</td>
+					<td>1000.00元</td>
+					<td>支付宝</td>
+					<td>2222284545454</td>
 				</tr>
 			</tbody>
 		</table>
