--- a/templates/purchase/order.html
+++ b/templates/purchase/order.html
@@ -1,16 +1,71 @@
 <div class="panel panel-flat">
 	<div class="panel-body">
+		<div class="mb-20">
+			<div class="input-group col-lg-2 pull-right">
+				<input type="text" class="form-control" placeholder=" ">
+				<span class="input-group-btn">
+					<button class="btn bg-teal" type="button">搜索</button>
+				</span>
+			</div>
+			<div class="clearfix"></div>
+		</div>
 		<table class="table table-bordered">
 			<thead>
 				<tr>
-					<th>ID</th>
-					<th>套餐封面</th>
+					<th>订单号</th>
+					<th>购买人</th>
+					<th>套餐名称</th>
 					<th>终端数量</th>
-					<th>套餐价格</th>
-					<th>销售总量</th>
+					<th>推送场景</th>
+					<th>费用</th>
+					<th>状态</th>
 					<th>创建时间</th>
 				</tr>
 			</thead>
+			<tbody>
+				<tr>
+					<td>20131231313</td>
+					<td>admin</td>
+					<td>优惠套餐</td>
+					<td>100</td>
+					<td>新场景</td>
+					<td>1000.00￥</td>
+					<td>已支付</td>
+					<td>2012-1-2</td>
+				</tr>
+				<tr>
+					<td>20131231313</td>
+					<td>admin</td>
+					<td>优惠套餐</td>
+					<td>100</td>
+					<td>新场景</td>
+					<td>1000.00￥</td>
+					<td>已支付</td>
+					<td>2012-1-2</td>
+				</tr>
+				<tr>
+					<td>20131231313</td>
+					<td>admin</td>
+					<td>优惠套餐</td>
+					<td>100</td>
+					<td>新场景</td>
+					<td>1000.00￥</td>
+					<td>已支付</td>
+					<td>2012-1-2</td>
+				</tr>
+			</tbody>
 		</table>
+
+		<div class="text-right mt-20">
+			<ul class="pagination">
+				<li><a href="#">&lsaquo;</a></li>
+				<li class="active"><a href="#">1</a></li>
+				<li><a href="#">2</a></li>
+				<li><a href="#">3</a></li>
+				<li class="disabled"><a href="#">4</a></li>
+				<li><a href="#">5</a></li>
+				<li><a href="#">&rsaquo;</a></li>
+			</ul>
+		</div>
 	</div>
 </div>
