--- a/templates/users/superadmin.html
+++ b/templates/users/superadmin.html
@@ -1,5 +1,14 @@
 <div class="panel panel-flat">
 	<div class="panel-body">
+		<div class="mb-20">
+			<a href="" title="" class="btn btn-primary"><i class="icon-user-plus"></i> 新增管理员</a>
+			<a href="" title="" class="btn btn-danger"><i class="icon-user-minus"></i> 批量删除</a>
+
+			<div class="pull-right">
+				<input type="text" name="" class="form-control" placeholder="">
+				<button type="button" class="btn btn-primary">搜索</button>
+			</div>	
+		</div>
 		<table class="table table-bordered">
 			<thead>
 				<tr>
