--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,16 @@
 <div class="row">
     <div class="col-lg-3">
+        <div class="col-lg-4">
+            <button class="btn bg-teal-400 btn-block btn-float btn-float-lg" type="button"><i class="icon-git-branch"></i> <span>添加用户</span></button>
+        </div>
+        <div class="col-lg-4">
+            <button class="btn bg-purple-300 btn-block btn-float btn-float-lg" type="button"><i class="icon-user"></i> <span>添加管理员</span></button>
+        </div>
+        <div class="col-lg-4">
+            <button class="btn bg-warning-400 btn-block btn-float btn-float-lg" type="button"><i class="icon-stats-bars"></i> <span>添加广告主</span></button>
+        </div>
+    </div>
+    <div class="col-lg-3">
         <!-- Members online -->
         <div class="panel bg-teal-400">
             <div class="panel-body">
@@ -11,34 +22,7 @@
                 <a class="heading-elements-toggle"><i class="icon-menu"></i></a></div>
             <div class="container-fluid">
                 <div id="members-online">
-                    <svg width="315.984375" height="50">
-                        <g width="315.984375">
-                            <rect class="d3-random-bars" width="9.102430555555554" x="3.901041666666666" height="27.500000000000004" y="22.499999999999996" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="16.904513888888886" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="29.907986111111107" height="42.5" y="7.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="42.91145833333333" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="55.91493055555555" height="25" y="25" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="68.91840277777779" height="42.5" y="7.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="81.921875" height="45" y="5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="94.92534722222221" height="25" y="25" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="107.92881944444444" height="40" y="10" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="120.93229166666667" height="50" y="0" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="133.93576388888889" height="47.5" y="2.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="146.9392361111111" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="159.94270833333331" height="47.5" y="2.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="172.94618055555554" height="42.5" y="7.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="185.94965277777774" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="198.95312499999997" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="211.9565972222222" height="35" y="15" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="224.96006944444443" height="40" y="10" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="237.96354166666666" height="47.5" y="2.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="250.96701388888886" height="50" y="0" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="263.97048611111114" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="276.9739583333333" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="289.97743055555554" height="35" y="15" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="302.98090277777777" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                        </g>
-                    </svg>
+                    
                 </div>
             </div>
         </div>
@@ -56,34 +40,7 @@
                 <a class="heading-elements-toggle"><i class="icon-menu"></i></a></div>
             <div class="container-fluid">
                 <div id="members-online">
-                    <svg width="315.984375" height="50">
-                        <g width="315.984375">
-                            <rect class="d3-random-bars" width="9.102430555555554" x="3.901041666666666" height="27.500000000000004" y="22.499999999999996" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="16.904513888888886" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="29.907986111111107" height="42.5" y="7.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="42.91145833333333" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="55.91493055555555" height="25" y="25" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="68.91840277777779" height="42.5" y="7.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="81.921875" height="45" y="5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="94.92534722222221" height="25" y="25" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="107.92881944444444" height="40" y="10" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="120.93229166666667" height="50" y="0" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="133.93576388888889" height="47.5" y="2.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="146.9392361111111" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="159.94270833333331" height="47.5" y="2.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="172.94618055555554" height="42.5" y="7.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="185.94965277777774" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="198.95312499999997" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="211.9565972222222" height="35" y="15" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="224.96006944444443" height="40" y="10" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="237.96354166666666" height="47.5" y="2.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="250.96701388888886" height="50" y="0" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="263.97048611111114" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="276.9739583333333" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="289.97743055555554" height="35" y="15" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="302.98090277777777" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                        </g>
-                    </svg>
+                    
                 </div>
             </div>
         </div>
@@ -101,34 +58,7 @@
                 <a class="heading-elements-toggle"><i class="icon-menu"></i></a></div>
             <div class="container-fluid">
                 <div id="members-online">
-                    <svg width="315.984375" height="50">
-                        <g width="315.984375">
-                            <rect class="d3-random-bars" width="9.102430555555554" x="3.901041666666666" height="27.500000000000004" y="22.499999999999996" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="16.904513888888886" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="29.907986111111107" height="42.5" y="7.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="42.91145833333333" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="55.91493055555555" height="25" y="25" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="68.91840277777779" height="42.5" y="7.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="81.921875" height="45" y="5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="94.92534722222221" height="25" y="25" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="107.92881944444444" height="40" y="10" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="120.93229166666667" height="50" y="0" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="133.93576388888889" height="47.5" y="2.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="146.9392361111111" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="159.94270833333331" height="47.5" y="2.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="172.94618055555554" height="42.5" y="7.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="185.94965277777774" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="198.95312499999997" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="211.9565972222222" height="35" y="15" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="224.96006944444443" height="40" y="10" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="237.96354166666666" height="47.5" y="2.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="250.96701388888886" height="50" y="0" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="263.97048611111114" height="32.5" y="17.5" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="276.9739583333333" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="289.97743055555554" height="35" y="15" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                            <rect class="d3-random-bars" width="9.102430555555554" x="302.98090277777777" height="30" y="20" style="fill: rgba(255, 255, 255, 0.498039);"></rect>
-                        </g>
-                    </svg>
+                    
                 </div>
             </div>
         </div>
