--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -1,7 +1,7 @@
 <div class="panel panel-flat">
 	<div class="panel-body">
 		<div class="mb-20">
-			<a href="" title="" class="btn btn-primary"><i class="icon-user-plus"></i> 新增管理员</a>
+			<a href="" title="" class="btn btn-primary" data-toggle="modal" data-target="#modal_form_vertical"><i class="icon-user-plus"></i> 新增管理员</a>
 			<a href="" title="" class="btn btn-danger"><i class="icon-user-minus"></i> 批量删除</a>
 			<div class="input-group col-lg-2 pull-right">
 				<input type="text" class="form-control" placeholder=" ">
@@ -58,3 +58,63 @@
 		</div>
 	</div>
 </div>
+
+<!-- Vertical form modal -->
+<div id="modal_form_vertical" class="modal fade">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h5 class="modal-title">新增用户</h5>
+			</div>
+
+			<form action="#">
+				<div class="modal-body">
+					<div class="form-group">
+						<div class="row">
+							<div class="col-sm-6">
+								<label>姓名</label>
+								<input type="text" placeholder="" class="form-control">
+							</div>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div class="row">
+							<div class="col-sm-6">
+								<label>邮箱</label>
+								<input type="text" placeholder="" class="form-control">
+							</div>
+
+							<div class="col-sm-6">
+								<label>手机</label>
+								<input type="text" placeholder="+99-99-9999-9999" data-mask="+99-99-9999-9999" class="form-control">
+								<span class="help-block">+99-99-9999-9999</span>
+							</div>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div class="row">
+							<div class="col-sm-4">
+								<label>帐号</label>
+								<input type="text" placeholder="" class="form-control">
+							</div>
+
+							<div class="col-sm-4">
+								<label>密码</label>
+								<input type="password" placeholder="******" class="form-control">
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="modal-footer">
+					<button type="button" class="btn btn-link" data-dismiss="modal">取消</button>
+					<button type="submit" class="btn btn-primary">保存</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+<!-- /vertical form modal -->
