--- a/templates/purchase/plan.html
+++ b/templates/purchase/plan.html
@@ -1,6 +1,7 @@
 <div class="panel panel-flat">
 	<div class="panel-body">
 		<div class="mb-20">
+			<button type="button" class="btn btn-primary pull-right ml-20">新增套餐</button>
 			<div class="input-group col-lg-2 pull-right">
 				<input type="text" class="form-control" placeholder=" ">
 				<span class="input-group-btn">
