--- a/templates/files/index.html
+++ b/templates/files/index.html
@@ -1,16 +1,53 @@
 <div class="row">
-	<div class="col-lg-3">
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<div ui-tree ng-model="vm.files" tree-check="false"></div>
-			</div>
-		</div>
-	</div>		
-	<div class="col-lg-9">
-		<div class="panel panel-default">
-			<div class="panel-body">
-				
-			</div>
-		</div>
-	</div>
+    <div class="col-lg-3">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div ui-tree ng-model="vm.files" tree-check="false" tree-checked="vm.node"></div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-9">
+        <div class="panel panel-default">
+            <div class="panel-heading" ng-show="vm.node">
+                <h6 class="panel-title"> {{vm.node.title}} </h6>
+                <div class="heading-elements">
+                    <button type="button" class="btn btn-primary heading-btn">上传文件</button>
+                </div>
+                <a class="heading-elements-toggle"><i class="icon-menu"></i></a></div>
+            <div class="panel-body">
+            	<table class="table table-bordered">
+            		<thead>
+            			<tr>
+            				<th>文件名</th>
+            				<th>大小</th>
+            				<th>上传时间</th>
+            				<th class="text-center">操作</th>
+            			</tr>
+            		</thead>
+            		<tbody>
+            			<tr ng-repeat="row in [1,2,3]">
+            				<td>1123.mp3</td>
+            				<td>2.2M</td>
+            				<td>2012-11-21</td>
+            				<td class="text-center">
+            					<a href="" title=""><i class="fa fa-remove"></i></a>
+            				</td>
+            			</tr>
+            		</tbody>
+            	</table>
+
+            	<div class="text-right mt-20">
+					<ul class="pagination">
+						<li><a href="#">&lsaquo;</a></li>
+						<li class="active"><a href="#">1</a></li>
+						<li><a href="#">2</a></li>
+						<li><a href="#">3</a></li>
+						<li class="disabled"><a href="#">4</a></li>
+						<li><a href="#">5</a></li>
+						<li><a href="#">&rsaquo;</a></li>
+					</ul>
+				</div>
+            </div>
+        </div>
+    </div>
 </div>
