--- a/templates/files/index.html
+++ b/templates/files/index.html
@@ -31,7 +31,8 @@
 							<td>2.2M</td>
 							<td>2012-11-21</td>
 							<td class="text-center">
-								<a href="" title=""><i class="fa fa-remove"></i></a>
+								<a href="" title="" ng-click="vm.verify()"><i class="fa fa-archive"></i> 审核</a>
+								<a href="" title=""><i class="fa fa-remove"></i> 删除</a>
 							</td>
 						</tr>
 					</tbody>
