节目推送页面

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,6 +9,12 @@
 	display: block;
 }
 
+@media (min-width: 1200px) {
+  .form-horizontal .control-label[class*=col-lg-] {
+    text-align: right;
+  }
+}
+
 /**
  * fancy tree 
  */
