--- a/templates/scene/index.html
+++ b/templates/scene/index.html
@@ -1,94 +1,176 @@
 <div class="row">
-	<div class="col-md-12 col-lg-4">
-		<div class="panel panel-primary">
-			<div class="panel-heading">
-				<h6 class="panel-title">场景分类</h6>
-				<div class="heading-elements">
-					<ul class="icons-list">
-						<li>
-							<a href=""><i class="fa fa-plus"></i></a>
-						</li>
-					</ul>
-				</div>
-				<a class="heading-elements-toggle"><i class="icon-menu"></i></a>
-			</div>
-
+    <div class="col-md-12 col-lg-3">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h6 class="panel-title">场景分类</h6>
+                <div class="heading-elements">
+                    <ul class="icons-list">
+                        <li>
+                            <a href=""><i class="fa fa-plus"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <a class="heading-elements-toggle"><i class="icon-menu"></i></a>
+            </div>
             <div class="panel-body">
-				<ul class="nav nav-pills nav-stacked">
-				    <li ng-class="{active : vm.category == $index}" ng-repeat="row in ['一', '二', '三', '四', '五']">
-				    	<a href="" data-toggle="tab" aria-expanded="false" ng-click="vm.category = $index">场景分类{{row}}</a>
-				    </li>
-				</ul>
-
-				<div class="text-center">
-					<ul class="pagination-sm twbs-default pagination">
-					    <li class="prev"><a href="javascript:void(0);">前一页</a></li>
-					    <li class="page active"><a href="javascript:void(0);">1</a></li>
-					    <li class="page"><a href="javascript:void(0);">2</a></li>
-					    <li class="page"><a href="javascript:void(0);">3</a></li>
-					    <li class="page"><a href="javascript:void(0);">4</a></li>
-					    <li class="next"><a href="javascript:void(0);">后一页</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="col-md-12 col-lg-8">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h6 class="panel-title">分类列表</h6>
-				<div class="heading-elements">
-				<button type="button" class="btn btn-primary heading-btn btn-xs">导出选中</button>
-				</div>
-				<a class="heading-elements-toggle"><i class="icon-menu"></i></a>
-			</div>
-			<div class="panel-body">
-				<table class="table table-bordered table-striped table-hover">
-					<thead>
-						<tr>	
-							<th>
-								<label>
-									<div class="checker">
-										<span class=""><input type="checkbox" class="styled" checked="checked"></span></div>
-								</label>
-							</th>
-							<th>序号</th>
-							<th>名称</th>
-							<th>创建时间</th>
-							<th class="text-center">操作</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="row in vm.scenes">
-							<td>
-								<label>
-									<div class="checker">
-										<span class=""><input type="checkbox" class="styled" checked="checked"></span></div>
-								</label>
-							</td>
-							<td ng-bind="$index+1"></td>
-							<td>{{row.title}}</td>
-							<td>{{row.created_at}}</td>
-							<td class="text-center">
-								<a href="" title="" class="mr-10">预览 <i class="fa fa-eye"></i> </a>
-								<a href="" title="" class="mr-10">编辑 <i class="fa fa-edit"></i> </a>
-								<a href="" title="">删除 <i class="fa fa-remove"></i> </a>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-				
-				<div class="text-right mt-20">
-					<ul class="pagination-sm twbs-default pagination">
-					    <li class="prev"><a href="javascript:void(0);">前一页</a></li>
-					    <li class="page active"><a href="javascript:void(0);">1</a></li>
-					    <li class="page"><a href="javascript:void(0);">2</a></li>
-					    <li class="page"><a href="javascript:void(0);">3</a></li>
-					    <li class="page"><a href="javascript:void(0);">4</a></li>
-					    <li class="next"><a href="javascript:void(0);">后一页</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
+                <ul class="nav nav-pills nav-stacked">
+                    <li ng-class="{active : vm.category == $index}" ng-repeat="row in ['一', '二', '三', '四', '五', '六']">
+                        <a href="" data-toggle="tab" aria-expanded="false" ng-click="vm.category = $index">场景分类{{row}}</a>
+                    </li>
+                </ul>
+                <div class="text-center">
+                    <ul class="pagination-sm twbs-default pagination">
+                        <li class="prev"><a href="javascript:void(0);">前一页</a></li>
+                        <li class="page active"><a href="javascript:void(0);">1</a></li>
+                        <li class="next"><a href="javascript:void(0);">后一页</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-12 col-lg-9">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h6 class="panel-title">分类列表</h6>
+                <div class="heading-elements">
+                    <button type="button" class="btn btn-primary heading-btn btn-xs">导出选中</button>
+                </div>
+                <a class="heading-elements-toggle"><i class="icon-menu"></i></a>
+            </div>
+            <div class="panel-body">
+                <table class="table table-bordered table-striped table-hover table-xs">
+                    <thead>
+                        <tr>
+                            <th>
+                                <label>
+                                    <div class="checker">
+                                        <span class=""><input type="checkbox" class="styled" checked="checked"></span></div>
+                                </label>
+                            </th>
+                            <th>序号</th>
+                            <th>名称</th>
+                            <th>作者</th>
+                            <th class="text-center">审核状态</th>
+                            <th>创建时间</th>
+                            <th class="text-center">操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="row in vm.scenes">
+                            <td>
+                                <label>
+                                    <div class="checker">
+                                        <span class=""><input type="checkbox" class="styled" checked="checked"></span></div>
+                                </label>
+                            </td>
+                            <td ng-bind="$index+1"></td>
+                            <td>{{row.title}}</td>
+                            <td>管理员</td>
+                            <td class="text-center">
+                                <span class="label label-warning" ng-if="$odd">审核中</span>
+                                <span class="label label-primary" ng-if="$even">审核通过</span>
+                            </td>
+                            <td>{{row.created_at}}</td>
+                            <td class="text-center">
+                                <a href="" title="" class="mr-10" data-toggle="modal" data-target="#modal_large" ng-click="vm.push(row)"><i class="fa fa-location-arrow"></i> 推送</a>
+                                <a href="" title="" class="mr-10"><i class="fa fa-eye"></i> 预览</a>
+                                <a href="" title="" class="mr-10"><i class="fa fa-edit"></i> 编辑</a>
+                                <a href="" title=""><i class="fa fa-remove"></i> 删除</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="text-right mt-20">
+                    <ul class="pagination-sm twbs-default pagination">
+                        <li class="prev"><a href="javascript:void(0);">前一页</a></li>
+                        <li class="page active"><a href="javascript:void(0);">1</a></li>
+                        <li class="page"><a href="javascript:void(0);">2</a></li>
+                        <li class="page"><a href="javascript:void(0);">3</a></li>
+                        <li class="page"><a href="javascript:void(0);">4</a></li>
+                        <li class="next"><a href="javascript:void(0);">后一页</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<script type="text/ng-template" id="templates/scene/push.html">
+    <!-- Large modal -->
+    <div id="modal_large" class="modal fade">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h5 class="modal-title">推送列表</h5>
+                </div>
+                <div class="modal-body">
+                	<div class="pb-20 text-right">
+                		<div class="col-lg-2 no-padding">
+							<select name="" chosen="" class="form-control">
+								<option value="">选择区域</option>
+								<option value="">重庆</option>
+								<option value="">北京</option>
+								<option value="">上海</option>
+							</select>
+                		</div>
+
+                		<button type="button" class="btn btn-primary mr-10">选择全部</button>
+                		<button type="button" class="btn btn-default">反选</button>
+                	</div>
+                    <table class="table table-bordered table-sm">
+                        <thead>
+                            <tr>
+                                <th class="text-center col-lg-1">
+                                	<div class="checkbox no-margin" ng-if="$odd">
+										<label>
+											<div class="checker border-primary-600 text-primary-800"><span class=""><input type="checkbox" class="control-primary" checked="checked"></span></div>
+										</label>
+									</div>
+                                </th>
+                                <th>终端ID</th>
+                                <th>区域</th>
+                                <th>状态</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="row in [1,2,3,4]">
+                                <td class="text-center no-margin">
+                                	<div class="checkbox no-margin" ng-if="$odd">
+										<label>
+											<div class="checker border-primary-600 text-primary-800"><span class="checked"><input type="checkbox" class="control-primary" checked="checked"></span></div>
+										</label>
+									</div>
+                                    <div class="checkbox no-margin" ng-if="$even">
+                                        <label>
+											<div class="checker text-primary-800"><span class=""><input type="checkbox" class="control-primary" checked="checked"></span></div>
+										</label>
+									</div>
+                                </td>
+                                <td>20120301</td>
+                                <td>重庆-南岸</td>
+                                <td>可用</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <div class="text-right mt-20">
+	                    <ul class="pagination-sm twbs-default pagination">
+	                        <li class="prev"><a href="javascript:void(0);">前一页</a></li>
+	                        <li class="page active"><a href="javascript:void(0);">1</a></li>
+	                        <li class="page"><a href="javascript:void(0);">2</a></li>
+	                        <li class="page"><a href="javascript:void(0);">3</a></li>
+	                        <li class="page"><a href="javascript:void(0);">4</a></li>
+	                        <li class="next"><a href="javascript:void(0);">后一页</a></li>
+	                    </ul>
+	                </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-link" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary">推送</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /large modal -->
+</script>
