修改页面样式

--- a/templates/purchase/plan.html
+++ b/templates/purchase/plan.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="clearfix"></div>
 		</div>
-		<table class="table table-bordered">
+		<table class="table table-bordered table-xs">
 			<thead>
 				<tr>
 					<th>ID</th>
