--- a/templates/scene/index.html
+++ b/templates/scene/index.html
@@ -117,7 +117,7 @@
                 		<button type="button" class="btn btn-primary mr-10">选择全部</button>
                 		<button type="button" class="btn btn-default">反选</button>
                 	</div>
-                    <table class="table table-bordered table-sm">
+                    <table class="table table-bordered table-xs">
                         <thead>
                             <tr>
                                 <th class="text-center col-lg-1">
