--- a/templates/shows/index.html
+++ b/templates/shows/index.html
@@ -16,7 +16,7 @@
 				<a class="heading-elements-toggle"><i class="icon-menu"></i></a>
 			</div>
 			<div class="panel-body">
-				<table class="table table-bordered table-striped table-hover">
+				<table class="table table-bordered table-striped table-hover table-xs">
 					<thead>
 						<tr>
 							<th>广告商</th>
