--- a/templates/devices/playlist.html
+++ b/templates/devices/playlist.html
@@ -44,7 +44,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-body">
-                <table class="table table-bordered">
+                <table class="table table-bordered table-xs">
                     <thead>
                         <tr>
                             <th>设备号</th>
