--- a/templates/purchase/order.html
+++ b/templates/purchase/order.html
@@ -49,7 +49,7 @@
             
             <div class="clearfix"></div>
         </div>
-        <table class="table table-bordered">
+        <table class="table table-bordered table-xs">
             <thead>
                 <tr>
                     <th>订单号</th>
