--- a/templates/users/customer.html
+++ b/templates/users/customer.html
@@ -11,7 +11,7 @@
 				</span>
 			</div>
 		</div>
-		<table class="table table-bordered">
+		<table class="table table-bordered table-xs">
 			<thead>
 				<tr>
 					<th><input type="checkbox" name="" value=""></th>
