--- a/templates/users/superadmin.html
+++ b/templates/users/superadmin.html
@@ -9,7 +9,7 @@
 				<button type="button" class="btn btn-primary">搜索</button>
 			</div>	
 		</div>
-		<table class="table table-bordered">
+		<table class="table table-bordered table-xs">
 			<thead>
 				<tr>
 					<th><input type="checkbox" name="" value=""></th>
